--- a/gsi526-lab.html
+++ b/gsi526-lab.html
@@ -124,13 +124,13 @@
 					<b>Material:</b>
 						<ul>
 						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 01 - Git.pptx"> Aula 01 - Git e Github</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/GaXt2Cns1LM"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - HTML.pdf"> Aula 02 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - CSS.pdf"> Aula 03 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="https://nodejs.dev/pt/learn/introduction-to-nodejs"> Aula 04 - NODE.JS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=iORW8s3O_xc&t=2591s"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Web Services.pdf"> Aula 06 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button>--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Instalação) </a></button>--></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 02 - HTML.pdf"> Aula 02 - HTML</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/z-bTz9Z9cnI"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - CSS.pdf"> Aula 03 - CSS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/gp2YM3Y9nYs"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="https://nodejs.dev/pt/learn/introduction-to-nodejs"> Aula 04 - NODE.JS</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=fm4_EuCsQwg"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 05 - JavaScript.pdf"> Aula 05 - JavaScript</a> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=iORW8s3O_xc&t=2591s"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Web Services.pdf"> Aula 06 - Web Services</a></button> ( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/cl46EoiPt80"> Ver Videoaula </a>)</li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Tutorial GWT.pdf"> Aula 06 - Tutorial de GWT</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 06 - Plugin GWT.pdf"> Aula 06 - Plugin do GWT (Manual de Instalação) </a></button></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 07 - IMC.pdf"> Aula 07 - Cálculo do IMC </a></button>--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/lab-programacao/Aula 03 - Git.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> Aula 03 - Git </a></button></li>-->
 						<!--<li><i class="icon-book"></i><a href="https://www.youtube.com/watch?v=brSwmLQA0iA" target="_blank"> <b>Primeiros passos com Node.js - Parte 1 </b></a></li>
@@ -177,6 +177,23 @@
 					<li><a href="https://www.youtube.com/watch?v=_y7rKxqPoyg&list=PLQCmSnNFVYnTD5p2fR4EXmtlR6jQJMbPb"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Curso de AngularJS para Completos Iniciantes</a></li>
 					<li><a href="https://www.youtube.com/watch?v=ov7VjrH5kfw&t=714s"> <img src="images/youtube.png" alt="" height="20" width="27"> [JavaScript] Videoaula sobre como criar um Blog usando Node.js e React</a></li>
 					<li><a href="https://www.youtube.com/watch?v=R-F-UcDo_5I&list=PL62G310vn6nF3gssjqfCKLpTK2sZJ_a_1"> <img src="images/youtube.png" alt="" height="20" width="27"> [Java] Curso Completo do framework Java Spring Boot</a></li>
+					</ul>
+					</div> 
+					<div>
+					<b>Código-fonte de exemplos de projetos em GWT (Google Web Toolkit):</b>
+					<ul>
+					<!--<li><a href="https://www.eclipse.org/downloads/packages/release/mars/2/eclipse-ide-java-ee-developers" target="_blank">Link do Eclipse IDE Mars 2</a></li>
+					<li><a href="http://www.gwtproject.org/doc/latest/DevGuideCodingBasicsClient.html" target="_blank">Onde aprender tudo sobre o framework Web GWT?</a></li>
+					<li><a href= "http://samples.gwtproject.org/samples/Showcase/Showcase.html#!CwCheckBox" target="_blank">GWT Showcase of Features</a></li>-->
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/PortariaPredio.zip"> Sistema de Portaria de Prédio</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/EmpresaFuncionarios.zip"> Sistema de Tipos de Funcionários</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/HelloWorld.zip"> Hello World GWT Application</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/imc.zip"> IMC GWT Application</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/StockWatcher.zip"> StockWatcher GWT Application</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/LoginApp.zip"> Login GWT Application</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/Cars.zip"> Cars GWT Application</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/CarSales.zip"> Car Sales GWT Application</a></li>
+					<li><i class="icon-folder"></i><a href="aulas/lab-programacao/database_tables.sql"> Tabelas do banco de dados MySQL (Dump)</a></li> 
 					</ul>
 					</div> 
 					<div>
