--- a/gsi526.html
+++ b/gsi526.html
@@ -135,9 +135,9 @@
 					<div>
 					<b>Listas:</b> 
 					<ul>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>09/04</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
-					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>13/08</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>04/12</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>09/04</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>13/08</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>12/09</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/seminário.pdf"> <b>Seminário</b></a></button></li>
