--- a/poo-python.html
+++ b/poo-python.html
@@ -108,19 +108,20 @@
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython09-Arquivos.pptx"> Aula 09 - Arquivos</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython10-Classes.pptx"> Aula 10 - Classes</a> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=ucglUvY9Qew"> Ver Videoaula </a>)--></li> 
 						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython11-Heranca_e_Polimorfismo.pptx"> Aula 11 - Herança e Polimorfismo </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython12-Tratamento_de_Excecoes.pptx"> Aula 12 - Tratamento de Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython12-Tratamento_de_Excecoes.pptx"> Aula 12 - Tratamento de Exceções </a> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython13-Matplotlib.pdf"> Aula 13 - Matplotlib </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/poo/backes/AulaPython14-Numpy.pdf"> Aula 14 - Numpy </a> <!--<img src="images/new2.gif" alt="" height="11" width="28">--></li>
 						</ul>
 					</div> 
-					<!--<div>
+					<div>
 					<b>Links diversos:</b>
 					<ul>
-					<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
-					<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
+					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GDCtOyEY1jc&list=PL8iN9FQ7_jt5TITT-3c4L6xNSmQMx1T4e"> <i>Programação Descomplicada em Python</i></a></li>
+					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a>--></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li> 
+					<!--<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
 					</ul>
-					</div>--> 
+					</div> 
 				</div>
 			</div>
 		</div>
