--- a/poo-python.html
+++ b/poo-python.html
@@ -116,7 +116,7 @@
 					<div>
 					<b>Links diversos:</b>
 					<ul>
-					<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GDCtOyEY1jc&list=PL8iN9FQ7_jt5TITT-3c4L6xNSmQMx1T4e"> <i>Programação Descomplicada em Python</i></a></li>
+					<!--<li><img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=GDCtOyEY1jc&list=PL8iN9FQ7_jt5TITT-3c4L6xNSmQMx1T4e"> <i>Programação Descomplicada em Python</i></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="https://drive.google.com/open?id=1bk_GlO6hMw9xxn1XbF60MC7H2k8AnCW2"> <img src="images/new2.gif" alt="" height="11" width="28"> <i>Livro: Java Como Programar 6ª edição (Deitel)</i></a>--></li> 
 					<!--<li><i class="icon-book"></i><a href="aulas/poo/lista1_pc2.pdf"> Lista 01 (Entrega: <b>23/03</b>) <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li> 
 					<!--<li><i class="icon-book"></i><a href="aulas/poo/lista2_pc2.pdf"> Lista 02 (Entrega: <b>13/04</b>) <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li> 
