--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -82,7 +82,7 @@
 					<ul>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 03.pdf"> Plano Didático - Turma 03 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Plano-Didático-Lab. PC2-2024.1 - Turma 04.pdf"> Plano Didático - Turma 04 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/AprendendoPython-Guia.pdf"> Aprendendo Python - um guia básico de programação <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					</ul>
 					</div>
 					<div>
