--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -103,7 +103,7 @@
 					<ul>
 					<li>Prova - 20 pts <b>(25/04/2025)</b></a></li>
 					<li>Exercícios - 40 pts <b>(11/07/2025)</b> <!--<i>Todos os exercícios</i> <!--<a href="aulas/lab-pc1/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
-					<li>Trabalho - 40 pts <b>(18/07/2025)</b> <a href="aulas/lab-pc1/Trabalho1-PC1.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<li>Trabalho - 40 pts <b>(18/07/2025)</b> <!--<a href="aulas/lab-pc1/Trabalho1-PC1.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li>Trabalho 1 - 30 pts <b>(Entrega: 18/02)</b> <a href="aulas/lab-pc1/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li> 
 					<li>Trabalho 2 - 30 pts <b>(Entrega: 18/03)</b> <a href="aulas/lab-pc1/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
 					<li>Trabalho 3 - 30 pts <b>(Entrega: 08/04)</b> <a href="aulas/lab-pc1/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li> 
@@ -114,14 +114,14 @@
 					<b>Material:</b> 
 					<ul>						
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 1.pdf"> Exercício Prático 1</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 3.pdf"> Exercício Prático 3</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 4.pdf"> Exercício Prático 4</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 5.pdf"> Exercício Prático 5</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 6.pdf"> Exercício Prático 6</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 7.pdf"> Exercício Prático 7</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 8.pdf"> Exercício Prático 8</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 9.pdf"> Exercício Prático 9</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 2.pdf"> Exercício Prático 2</a>--></li>			
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 3.pdf"> Exercício Prático 3</a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 4.pdf"> Exercício Prático 4</a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 5.pdf"> Exercício Prático 5</a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 6.pdf"> Exercício Prático 6</a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 7.pdf"> Exercício Prático 7</a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 8.pdf"> Exercício Prático 8</a>--></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 9.pdf"> Exercício Prático 9</a>--></li>
 					</ul>
 					</div>
 					<!-- <div>
