--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -114,7 +114,7 @@
 					<b>Material:</b> 
 					<ul>						
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 1.pdf"> Exercício Prático 1</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 2.pdf"> Exercício Prático 2</a>--></li>			
+					<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 3.pdf"> Exercício Prático 3</a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 4.pdf"> Exercício Prático 4</a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/python/Prática 5.pdf"> Exercício Prático 5</a>--></li>
