--- a/gsi526.html
+++ b/gsi526.html
@@ -105,7 +105,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-smells.pptx"> Aula 05 - Reengenharia, Refatoração e Bad Smells</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=cllmxcVXpzc"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-arquitetura.pptx"> Aula 08 - Arquitetura de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-padroes-arquiteturais.pptx"> Aula 09 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Hexagonal e Serverless</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)--></li>
@@ -121,14 +121,14 @@
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula11-qualidade.pptx"> Aula 11 - Qualidade de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9irMtq4acNk"> Ver Videoaula </a>)--></li>
 						</ul> 
 					</div> 
-					<div>
+					<!--<div>
 					<b>Exercícios de Verdadeiro ou Falso:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="https://engsoftmoderna.info/exercicios/exvf.html#/cap/2" target="_blank"> Cap. 2 - Processos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="https://engsoftmoderna.info/exercicios/exvf.html#/cap/3" target="_blank"> Cap. 3 - Requisitos <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href= "https://engsoftmoderna.info/exercicios/exvf.html#/cap/9" target="_blank"> Cap. 9 - Refactoring <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					</ul>
-					</div>
+					</div>-->
 					<!--<div>
 					<b>Aulas Síncronas Gravadas no Teams:</b> 
 					<ul>
@@ -145,7 +145,7 @@
 					<b>Listas:</b> 
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/gsi526/lista1.pdf"> Lista 01 (Entrega: <b>29/04/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19"></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/deadline.png" alt="" height="25" width="19">--></li> 
+					<li><i class="icon-book"></i><a href="aulas/gsi526/lista2.pdf"> Lista 02 (Entrega: <b>04/06/2025</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28"></li> 
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/lista3.pdf"> Lista 03 (Entrega: <b>16/07/2025</b>)</a></button> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/gsi526/gabarito_lista_3.pdf"> <img src="images/new2.gif" alt="" height="11" width="28"> <b> Gabarito da Lista 3</b></a></button></li>
 					<li><i class="icon-book"></i><a href="https://www.tutorialspoint.com/junit/index.htm" target="_blank"> Tutorial sobre o framework JUnit</a></li>
