--- a/material.html
+++ b/material.html
@@ -80,9 +80,9 @@
 						<ul>
 						<li><a href="gsi526.html"><i class="icon-home"></i><i> Engenharia de Software II <b>(Terça: 07h00 - 08h40 e Quarta: 10h40 - 12h20)</b></i></a></li> 
 						<li><a href="poo-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 <b>(Terça: 13h00 - 14h40)</b></i></a></li>
-						<!--<li><a href="poo.html"><i class="icon-home"></i><i> Programação de Computadores 2 (Teoria) <b>(Java)</b></i></a></li>-->
 						<!--<li><a href="gsi526-lab.html"><i class="icon-home"></i><i> Engenharia de Software I Lab. <b>(Quarta: 08h50 - 12h20)</b></i></a></li>-->
-						<li><a href="lab-pc1.html"><i class="icon-home"></i><i> Programação de Computadores 1 Lab. <b>(Sexta: 08h50 - 10h30)</b></i></a></li>
+						<li><a href="pc1.html"><i class="icon-home"></i><i> Programação de Computadores 1 <b>(Sexta: 08h50 - 10h30)</b></i></a></li>
+						<li><a href="lab-pc1.html"><i class="icon-home"></i><i> Programação de Computadores 1 Lab. <b>(Sexta: 10h40 - 12h20)</b></i></a></li>
 						<li><a href="poo-lab-python.html"><i class="icon-home"></i><i> Programação de Computadores 2 Lab. <b>(Sexta: 14h50 - 18h20)</b></i></a></li>
 						<!--<li><a href="gsi570.html"><i class="icon-home"></i><i> Programação Lógica <b>(Terça: 08h50 - 10h30 / Quinta: 08h50 - 10h30)</b></i></a></li> -->
 						<!--<li><a href="gsi522.html"><i class="icon-home"></i><i> GSI522 - Modelagem de Software <b>(Terça: 14h50 - 16h50 / Quarta: 13h10 - 14h50)</b></i></a></li>
