--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -103,7 +103,7 @@
 					<div>
 					<b>Avaliação:</b>
 					<ul>
-					<li>Trabalho 1 - 30 pts <b>(10/10/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>-->
+					<li>Trabalho 1 - 30 pts <b>(10/10/2025)</b> <a href="aulas/lab-poo/trabalhos/Trabalho1-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<li>Trabalho 2 - 30 pts <b>(14/11/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho2-PC2.pdf"> - <i> Especificação </i> <img src="images/deadline.png" alt="" height="25" width="19"></a></li>-->
 					<li>Trabalho 3 - 30 pts <b>(28/11/2025)</b> <!--<a href="aulas/lab-poo/trabalhos/Trabalho3-PC2.pdf"> - <i> Especificação </i> <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					<li>Exercícios Práticos - 10 pts <b>(05/12/2025)</b>  <!--<i>Ex. 2, Ex. 4, Ex. 6 e Ex. 9</i> <!--<a href="aulas/lab-poo/notas_exercicios.pdf"> - <i> Notas </i> <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
